# Project-Recommendations-

./: .gitignore  README.md  TEAM.md  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md  TEAM.md  TESTING.md
src/: config.py  main.py  preparing_data.py
src/abstract_classes/: __init__.py  model_base.py
src/matrix_factorization_based_cf/: model.py
src/schemes/: __init__.py  metrics_scheme.py  model_base.py
tests/: conftest.py
tests/unit/: test_data_preprocessing.py
