[tool.poetry]
package-mode = false

[project]
name = "src"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (==1.26.4)",
    "surprise (>=0.1,<0.2)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "dask (>=2025.10.0,<2026.0.0)",
    "dask-ml (>=2025.1.0,<2026.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
