[tool.poetry]
package-mode = false

[project]
name = "src"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (==1.26.4)",
    "surprise (>=0.1,<0.2)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "dask (>=2025.10.0,<2026.0.0)",
    "dask-ml (>=2025.1.0,<2026.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = """
    --cov=src/
    --cov-report=html
    --cov-report=xml
    --cov-report=term-missing
    -v"""

[tool.coverage.run]
source = ["src/"]
omit = ["*/tests/*", "*/__init__.py"]



[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]